fix: use npm publish instead of pnpm for OIDC trusted publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,4 +34,4 @@ jobs:
         run: pnpm build
 
       - name: Publish to npm (with OIDC Trusted Publishing)
-        run: cd packages/email && pnpm publish --access public --no-git-checks --provenance
+        run: cd packages/email && npm publish --access public --provenance
