--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,4 +36,4 @@ jobs:
         run: pnpm build
 
       - name: Publish to npm (with OIDC Trusted Publishing)
-        run: cd packages/email && npm publish --access public --provenance
+        run: cd packages/email && npm publish --access public
